fix display for header background on mobile

--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,7 @@ header .welcome-section {
     width: 100vw;
     padding-top: 15%;
     padding-bottom: 15%;
+    margin-top: 45px;
 
 }
 
